# function

./: .gitignore  README.md  frames_2026-04-25_11.53.06.gv  frames_2026-04-25_12.09.12.gv
.claude/: settings.local.json
src/agv_mecanum_bringup/: CMakeLists.txt  package.xml
src/agv_mecanum_bringup/launch/: full_system.launch.py  sim_only.launch.py  teleop.launch.py
src/agv_mecanum_description/: CMakeLists.txt  package.xml
src/agv_mecanum_description/config/: mecanum_controllers.yaml
src/agv_mecanum_description/launch/: description.launch.py
src/agv_mecanum_description/urdf/: agv_mecanum.urdf.xacro  agv_properties.xacro  mecanum_wheel.xacro  ros2_control.xacro  sensors.xacro
src/agv_mecanum_gazebo/: CMakeLists.txt  package.xml
src/agv_mecanum_gazebo/config/: bridge.yaml
src/agv_mecanum_gazebo/launch/: gazebo.launch.py
src/agv_mecanum_gazebo/scripts/: cmd_vel_bridge.py  cmd_vel_relay.py  drive_demo.py  mecanum_bridge.py  tf_relay.py
src/agv_mecanum_gazebo/worlds/: warehouse.world
src/agv_mecanum_navigation/: CMakeLists.txt  package.xml
src/agv_mecanum_navigation/config/: nav2.yaml  slam.yaml
src/agv_mecanum_navigation/launch/: full_navigation.launch.py  navigation.launch.py  slam.launch.py
src/agv_mecanum_navigation/maps/: generate_warehouse_map.py  warehouse_map.pgm  warehouse_map.yaml
src/agv_mecanum_navigation/rviz/: nav_config.rviz
